testdata/baselines/reference/conformance/typedefModuleExportsIndirect1.errors.txt
typedefModuleExportsIndirect1.js(3,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== typedefModuleExportsIndirect1.js (1 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const dummy = 0;
    module.exports = dummy;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== use.js (0 errors) ====
    /** @typedef {import('./typedefModuleExportsIndirect1').C} C */
    /** @type {C} */
    var c
    